--- a/AnimalSpawn/AnimalSpawn.Api/AnimalSpawn.Api.csproj
+++ b/AnimalSpawn/AnimalSpawn.Api/AnimalSpawn.Api.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\AnimalSpawn.Application\AnimalSpawn.Application.csproj" />
     <ProjectReference Include="..\AnimalSpawn.Domain\AnimalSpawn.Domain.csproj" />
     <ProjectReference Include="..\AnimalSpwan.Infrastucture\AnimalSpwan.Infraestructure.csproj" />
   </ItemGroup>
